mybril/src/snapshots/mybril__test__my_trivial_dce_graph@double-pass.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{} -> {}\\n\\n{}\", txt, orig.1, after.1,\n    bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/tdce/double-pass.bril
---
# ARGS: tdcep
@main {
  a: int = const 4;
  b: int = const 2;
  c: int = const 1;
  d: int = add a b;
  e: int = add c d;
  print d;
}


6 -> 4

@main {
  a: int = const 4;
  b: int = const 2;
  d: int = add a b;
  print d;
}

