mybril/src/snapshots/mybril__test__my_trivial_dce_graph@reassign-dkp.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{} -> {}\\n\\n{}\", txt, orig.1, after.1,\n    bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/tdce/reassign-dkp.bril
---
# ARGS: dkp
@main {
  a: int = const 100;
  a: int = const 42;
  print a;
}


3 -> 3

@main {
  a: int = const 100;
  a: int = const 42;
  print a;
}

