mybril/src/snapshots/mybril__test__trivial_dce@combo.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{}\", txt, bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/tdce/combo.bril
---
# ARGS: tdce+
@main {
  a: int = const 1;
  b: int = const 2;
  c: int = add a b;
  b: int = const 3;
  d: int = add a b;
  print d;
}


@main {
  a: int = const 1;
  b: int = const 2;
  b: int = const 3;
  d: int = add a b;
  print d;
}

