mybril/src/snapshots/mybril__test__trivial_dce@diamond.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{}\", txt, bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/tdce/diamond.bril
---
@main {
  a: int = const 47;
  cond: bool = const true;
  br cond .left .right;
.left:
  a: int = const 1;
  jmp .end;
.right:
  a: int = const 2;
  jmp .end;
.end:
  print a;
}


@main {
  a: int = const 47;
  cond: bool = const true;
  br cond .left .right;
.left:
  a: int = const 1;
  jmp .end;
.right:
  a: int = const 2;
  jmp .end;
.end:
  print a;
}

