mybril/src/snapshots/mybril__test__trivial_dce@skipped.bril.snap
---
source: mybril/src/main.rs
expression: "format!(\"{}\\n\\n{}\", txt, bril2txt(json_after.as_str()))"
input_file: mybril/tests/examples/tdce/skipped.bril
---
@main {
  a: int = const 4;
  b: int = const 2;
  jmp .end;
  print b;
.end:
  print a;
}


@main {
  a: int = const 4;
  b: int = const 2;
  jmp .end;
  print b;
.end:
  print a;
}

